<resources>
    <!-- Name for the application [CHAR LIMIT=20] -->
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit product</string>

    <!-- Toast message in editor when a new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved!</string>

    <!-- Toast message in editor when a new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_message">Discard your changes and keep editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted!</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for product information in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Product:</string>

    <!-- Label for sales price information in the editor [CHAR LIMIT=30] -->
    <string name="category_sales_price">Sales Price:</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity:</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier:</string>

    <!-- Text hint for product field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Product e.g. Lawn mower</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=10] -->
    <string name="hint_product_price">350</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_quantity">10</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=20] -->
    <string name="hint_product_supplier">Supplier e.g. Lawn Mower Co</string>

    <!-- Text for the save button in the editor activity [CHAR LIMIT=10] -->
    <string name="save_button_text">Save</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Text preceding the TextView for the product name in the CatalogActivity [CHAR LIMIT=20] -->
    <string name="text_product_name">Product:</string>

    <!-- Text preceding the TextView for the product price in the CatalogActivity [CHAR LIMIT=20] -->
    <string name="text_product_price">Price:</string>

    <!-- Text preceding the TextView for the product quantity in the CatalogActivity [CHAR LIMIT=20] -->
    <string name="text_product_quantity">Quantity:</string>

    <!-- Text preceding the TextView for the product supplier in the CatalogActivity [CHAR LIMIT=20] -->
    <string name="text_product_supplier">Supplier:</string>

    <!-- Text appended with the product price in the InventoryCursorAdapter class before its
    displayed in the activity_catalog.xml [CHAR LIMIT=20] -->
    <string name="dollar_character">$</string>

    <!-- Text for the supplier TextView appended with the product supplier's name [CHAR LIMIT=10] -->
    <string name="by">by\u0020</string>

    <!-- Text for the quantity TextView appended with the product quantity [CHAR LIMIT=20] -->
    <string name="in_stock">In Stock:\u0020</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_text">Get started by adding a product.</string>

    <!-- Subtitle text for the empty view which prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
</resources>
