<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            tools:src="@drawable/delmonte_image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_background" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                app:srcCompat="@drawable/ic_product" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/text_product_name"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                tools:text="Delmonte" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                app:srcCompat="@drawable/ic_price" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/text_product_price"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                tools:text="$40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="2dp"
                app:srcCompat="@drawable/ic_quantity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/text_product_quantity"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                tools:text="200" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                app:srcCompat="@drawable/ic_supplier" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_vertical"
                android:text="@string/text_product_supplier"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/supplier_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/secondaryText"
                android:textSize="14sp"
                tools:text="Jumia" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>